# cis194

hw10/: AParser.hs
hw11/: .AParser.hs.swp  .SExpr.hs.swp  AParser.hs  SExpr.hs
hw12/: Risk.hs  hie.yaml  hw12.cabal
hw12/dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
hw6/: Fibonnaci.hs
hw7/: JoinList.hs  Sized.hs
hw8/: Party.hs
hw9/: hurray.txt
