cabal-version:      3.0
name:               hw12
version:            0.1.0.0
-- synopsis:
-- description:
license:            BSD-3-Clause
license-file:       LICENSE
author:             dawkrish
maintainer:         krishnansh710@gmail.com
-- copyright:
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable hw12
    import:           warnings
    main-is:          Risk.hs
    -- other-modules:
    -- other-extensions:
    build-depends:    base ^>=4.19.1.0, MonadRandom ^>= 0.6
    hs-source-dirs:   .
    default-language: Haskell2010
